fixing layout breakage

--- a/style.css
+++ b/style.css
@@ -78,6 +78,14 @@ html{
 }
 
 
+pre {
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+   }
+
 
 @media(max-width: 576px){
     .title{
@@ -114,7 +122,7 @@ html{
        width: 100%;
    }
    .codeBlock{
-       font-size: 0.5rem;
+       font-size: 0.8rem;
    }
 }
 
@@ -144,8 +152,8 @@ html{
     .graphImg img{
         width: 100%;
     }
-    .codeBlock code{
-        font-size: 0.8rem;
+    .codeBlock{
+        font-size: 1rem;
     }
  
 }
@@ -169,8 +177,8 @@ html{
     .graphImg img{
         width: 70%;
     }
-    .codeBlock code{
-        font-size: 0.8rem;
+    .codeBlock{
+        font-size: 1rem;
     }
     
 }
